objects/CMPL123QMS__Mitigation_Option__c.object
<CustomObject>
    <fields>
        <fullName>CMPL123QMS__Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Detectability__c</fullName>
        <label>Detectability</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__FME_Description__c</fullName>
        <description>A Cross-object formula field to display the Failure Mode Effect Short Description field.</description>
        <formula>IF(ISBLANK(CMPL123QMS__Failure_Mode_Effect__r.CMPL123QMS__Short_Description__c),"n/a",CMPL123QMS__Failure_Mode_Effect__r.CMPL123QMS__Short_Description__c)</formula>
        <label>FME Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Failure_Mode_Effect__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Failure Mode Effect</label>
        <referenceTo>CMPL123QMS__Failure_Mode_Effect__c</referenceTo>
        <relationshipLabel>Mitigation Options</relationshipLabel>
        <relationshipName>Mitigation_Options</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__HSIT_Description__c</fullName>
        <description>A Cross-Object formula field to display the Hazardous Situation Short Description field.</description>
        <formula>IF(ISBLANK(CMPL123QMS__Hazardous_Situation__r.CMPL123QMS__Short_Description__c),"n/a",CMPL123QMS__Hazardous_Situation__r.CMPL123QMS__Short_Description__c)</formula>
        <label>HSIT Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Hazardous_Situation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Hazardous Situation</label>
        <referenceTo>CMPL123QMS__Hazardous_Situation__c</referenceTo>
        <relationshipLabel>Mitigation Options</relationshipLabel>
        <relationshipName>Mitigation_Options</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Justification__c</fullName>
        <label>Justification</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Mitigated_P1_Score__c</fullName>
        <label>Mitigated P1 Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Mitigation_Steps__c</fullName>
        <label>Mitigation Steps</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Mitigation_Type__c</fullName>
        <label>Mitigation Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>CMPL123QMS__Mitigation_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Occurrence__c</fullName>
        <label>Occurrence</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Risk_Score__c</fullName>
        <formula>CMPL123QMS__Severity__c  *  CMPL123QMS__Occurrence__c  *  CMPL123QMS__Detectability__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Risk Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Severity__c</fullName>
        <label>Severity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Short_Description__c</fullName>
        <label>Short Description</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123QMS__Verification_Steps__c</fullName>
        <label>Verification Steps</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Mitigation Option</label>
    <listViews>
        <fullName>CMPL123QMS__All_Mitigation_Option</fullName>
        <columns>NAME</columns>
        <columns>CMPL123QMS__Short_Description__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>MITO-{00000}</displayFormat>
        <label>Mitigation Option Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Mitigation Options</pluralLabel>
    <recordTypes>
        <fullName>CMPL123QMS__General_Purpose</fullName>
        <active>true</active>
        <label>General Purpose</label>
    </recordTypes>
    <recordTypes>
        <fullName>CMPL123QMS__ISO_14971</fullName>
        <active>true</active>
        <label>ISO 14971</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>